feat(project): integrate CI/CD with GitHub Actions and enhance testing
This commit introduces a Node.js CI pipeline using GitHub Actions, enabling automated builds and tests on code changes. Additionally, it includes several changes to the project structure:
- Added dependencies: devextreme, jquery, jsdom, nyc, sinon.
- Implemented `pokemon-combat.js` for battle simulation between Pokemon.
- Refactored API-related code into `api.js` under services with associated tests.
- Introduced mock data and services for testing purposes.
- Updated `index.html` script references for new modules.
- Enhanced test scripts in `package.json` to include QUnit and NYC coverage.

Removed `src/commons.js`, replacing its functionality with more modular service methods in `api.js`.

These updates aim to improve development productivity by incorporating automated testing and continuous integration practices.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <!-- DevExtreme libraries (reference only one of them) -->
   <script type="text/javascript" src="https://cdn3.devexpress.com/jslib/24.2.3/js/dx.all.js"></script>
 
-  <script type="text/javascript" src="./src/commons.js"></script>
+  <script type="text/javascript" src="./src/index.js"></script>
+  <script type="text/javascript" src="./src/services/api.js"></script>
   <script type="text/javascript" src="./src/features/pokemon-datagrid.js"></script>
 </head>
 
